# p-xing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/: p-xing.pbm
include/: pbm.h  pxing.h  render.h
puzzles/: arrow-5x5.pbm  cross-5x5.pbm  easy-001-plus-15x15.pbm  easy-002-x-mark-15x15.pbm  easy-003-diamond-15x15.pbm  easy-004-filled-diamond-15x15.pbm  easy-005-heart-15x15.pbm  easy-006-sun-15x15.pbm  easy-007-moon-15x15.pbm  easy-008-star-15x15.pbm  easy-009-arrow-up-15x15.pbm  easy-010-arrow-down-15x15.pbm  easy-011-arrow-left-15x15.pbm  easy-012-arrow-right-15x15.pbm  easy-013-check-15x15.pbm  easy-014-question-15x15.pbm  easy-015-exclamation-15x15.pbm  easy-016-key-15x15.pbm  easy-017-flag-15x15.pbm  easy-018-envelope-15x15.pbm  easy-019-house-icon-15x15.pbm  easy-020-tree-icon-15x15.pbm  easy-021-fish-15x15.pbm  easy-022-umbrella-15x15.pbm  easy-023-anchor-15x15.pbm  easy-024-crown-15x15.pbm  easy-025-cup-15x15.pbm  easy-026-candle-15x15.pbm  easy-027-bell-15x15.pbm  easy-028-flower-15x15.pbm  easy-029-mushroom-15x15.pbm  easy-030-cloud-15x15.pbm  easy-031-lightning-15x15.pbm  easy-032-music-note-15x15.pbm  easy-033-smile-simple-15x15.pbm  easy-034-frown-simple-15x15.pbm  easy-035-pencil-15x15.pbm  easy-heart-7x7.pbm  easy-tree-9x11.pbm  hard-001-city-skyline-15x15.pbm  (+70 more)
src/: CMakeLists.txt  main.c  pbm.c  pxing.c  render.c
tests/: CMakeLists.txt  data-commented.pbm  test_pbm.c
